--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -46,11 +46,22 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
-                <li><a href="/mapa.html">HOSPITALES</a></li>
-                <li><a href="/contacto.html">CONTACTO</a></li>
+                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/index.html">HOME</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/listado-enfermedades.html">ENFERMEDADES</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="vacunas.html">VACUNACI&oacute;N</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/mapa.html">HOSPITALES</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/contacto.html">CONTACTO</a>
+                </li>
             </ul>
         </nav>
         <main class="container">
@@ -62,9 +73,6 @@
                     </button>
                 </a>
             </section>
-            <div class="mensajeEnvio ocultar">
-                <p></p>
-            </div>
             <section class="detalles-title">
                 <h1>COVID-19</h1>
                 <article class="img-text-content">
@@ -519,17 +527,15 @@
                 </div>
                 <div class="footer-right">
                     <h5 class="footer-title">Redes Sociales</h5>
-                    <div>
-                        <a href="https://www.facebook.com/" target="_blank"
-                            ><i class="fab fa-facebook"></i
-                        ></a>
-                        <a href="https://www.instagram.com/" target="_blank"
-                            ><i class="fab fa-instagram"></i
-                        ></a>
-                        <a href="https://www.twitter.com/" target="_blank"
-                            ><i class="fab fa-twitter"></i
-                        ></a>
-                    </div>
+                    <a href="https://www.facebook.com/" target="_blank"
+                        ><i class="fab fa-facebook"></i
+                    ></a>
+                    <a href="https://www.instagram.com/" target="_blank"
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                    <a href="https://www.twitter.com/" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                    ></a>
                 </div>
             </div>
         </footer>
