--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>FAMEDIC - Servicios de salud</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/index.css" />
+        <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -46,16 +47,30 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="vacunas.html">VACUNACI&oacute;N</a></li>
-                <li><a href="/mapa.html">HOSPITALES</a></li>
-                <li><a href="/contacto.html">CONTACTO</a></li>
+                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/index.html">HOME</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/listado-enfermedades.html">ENFERMEDADES</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="vacunas.html">VACUNACI&oacute;N</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/mapa.html">HOSPITALES</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/contacto.html">CONTACTO</a>
+                </li>
             </ul>
         </nav>
         <main class="container-fluid">
             <section class="slider-content">
-                <img src="./img/slider-principal.png" alt="covid" />
+                <img
+                    src="./img/slider-principal.png"
+                    alt="diseño de un doctor hablando con un pacienciente sobre los posibles sintomas"
+                />
             </section>
             <section class="pastilla-title">
                 <h1>FAMADEIC</h1>
@@ -67,7 +82,7 @@
                         <a href="mapa.html"
                             ><img
                                 src="./img/hospital-icon.png"
-                                alt="hospitales-icon"
+                                alt="icono de la ubicacion de los hospitales"
                                 class="pastillas-img"
                         /></a>
                     </div>
@@ -82,7 +97,7 @@
                         <a href="listado-enfermedades.html"
                             ><img
                                 src="./img/enfermedad-icon-new.png"
-                                alt="enfermedad-icon"
+                                alt="icono de una persona que se siente mal"
                                 class="pastillas-img"
                         /></a>
                     </div>
@@ -99,7 +114,7 @@
                         <a href="vacunas.html"
                             ><img
                                 src="./img/vacuna-icon.png"
-                                alt="vacunas-icon"
+                                alt="icono de una inyeccion"
                                 class="pastillas-img"
                         /></a>
                     </div>
@@ -110,15 +125,17 @@
                     </div>
                 </article>
             </section>
-            <aside class="banner-tel-content">
-                <div class="banner-left">
-                    <p>Si ten&eacute;s sintomas de COVID-19</p>
-                    <h2>llam&aacute; al</h2>
-                </div>
-                <div class="banner-right">
-                    <i class="fas fa-phone-alt"><span> 148</span></i>
+            <!-- banner mobile -->
+            <aside class="banner-telefono">
+                <div>
+                    <img
+                        src="img/banner-mobile.png"
+                        alt="banner con el numero de telefono 148 para llamar en caso de covid"
+                    />
                 </div>
             </aside>
+            <!-- banner desktop -->
+
             <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
@@ -144,19 +161,18 @@
                 </div>
                 <div class="footer-right">
                     <h5 class="footer-title">Redes Sociales</h5>
-                    <div>
-                        <a href="https://www.facebook.com/" target="_blank"
-                            ><i class="fab fa-facebook"></i
-                        ></a>
-                        <a href="https://www.instagram.com/" target="_blank"
-                            ><i class="fab fa-instagram"></i
-                        ></a>
-                        <a href="https://www.twitter.com/" target="_blank"
-                            ><i class="fab fa-twitter"></i
-                        ></a>
-                    </div>
+                    <a href="https://www.facebook.com/" target="_blank"
+                        ><i class="fab fa-facebook"></i
+                    ></a>
+                    <a href="https://www.instagram.com/" target="_blank"
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                    <a href="https://www.twitter.com/" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                    ></a>
                 </div>
             </div>
         </footer>
+        <script src="js/main.js"></script>
     </body>
 </html>
