--- a/vacunas.html
+++ b/vacunas.html
@@ -44,11 +44,22 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li><a href="/index.html">HOME</a></li>
-                <li><a href="/listado-enfermedades.html">ENFERMEDADES</a></li>
-                <li><a href="/vacunas.html">VACUNACI&oacute;N</a></li>
-                <li><a href="/mapa.html">HOSPITALES</a></li>
-                <li><a href="/contacto.html">CONTACTO</a></li>
+                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/index.html">HOME</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/listado-enfermedades.html">ENFERMEDADES</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="vacunas.html">VACUNACI&oacute;N</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/mapa.html">HOSPITALES</a>
+                </li>
+                <li class="nav-bar-li ocultar">
+                    <a href="/contacto.html">CONTACTO</a>
+                </li>
             </ul>
         </nav>
         <main class="container">
@@ -180,19 +191,18 @@
                 </div>
                 <div class="footer-right">
                     <h5 class="footer-title">Redes Sociales</h5>
-                    <div>
-                        <a href="https://www.facebook.com/" target="_blank"
-                            ><i class="fab fa-facebook"></i
-                        ></a>
-                        <a href="https://www.instagram.com/" target="_blank"
-                            ><i class="fab fa-instagram"></i
-                        ></a>
-                        <a href="https://www.twitter.com/" target="_blank"
-                            ><i class="fab fa-twitter"></i
-                        ></a>
-                    </div>
+                    <a href="https://www.facebook.com/" target="_blank"
+                        ><i class="fab fa-facebook"></i
+                    ></a>
+                    <a href="https://www.instagram.com/" target="_blank"
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                    <a href="https://www.twitter.com/" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                    ></a>
                 </div>
             </div>
         </footer>
+        <script src="js/main.js"></script>
     </body>
 </html>
