--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FAMEDIC - Servicios de salud</title>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"
+        />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/index.css" />
-        <!-- <link rel="stylesheet" href="css/mobile.css" /> -->
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -19,6 +22,11 @@
             type="image/png"
             sizes="16x16"
         />
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <header id="inicio" class="header-content">
@@ -47,7 +55,10 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-menu">
+                    <span class="close-nav-bar ocultar">X</span>
+                    <i class="fas fa-bars"></i>
+                </li>
                 <li class="nav-bar-li ocultar">
                     <a href="/index.html">HOME</a>
                 </li>
@@ -66,11 +77,27 @@
             </ul>
         </nav>
         <main class="container-fluid">
-            <section class="slider-content">
-                <img
-                    src="./img/slider-principal.png"
-                    alt="diseño de un doctor hablando con un pacienciente sobre los posibles sintomas"
-                />
+            <section>
+                <ul class="slider-content">
+                    <li>
+                        <img
+                            src="img/slider-01.png"
+                            alt="diseño de un doctor hablando con un pacienciente sobre los posibles sintomas"
+                        />
+                    </li>
+                    <li>
+                        <img
+                            src="img/slider-03.png"
+                            alt="diseño de distintos medicos con sus respecivos uniformes"
+                        />
+                    </li>
+                    <li>
+                        <img
+                            src="img/slider-04.png"
+                            alt="diseño de una ambulancia con un doctor y una enfermera"
+                        />
+                    </li>
+                </ul>
             </section>
             <section class="pastilla-title">
                 <h1>FAMADEIC</h1>
@@ -125,17 +152,15 @@
                     </div>
                 </article>
             </section>
-            <!-- banner mobile -->
             <aside class="banner-telefono">
                 <div>
                     <img
+                        id="banner-telefono-responsive"
                         src="img/banner-mobile.png"
                         alt="banner con el numero de telefono 148 para llamar en caso de covid"
                     />
                 </div>
             </aside>
-            <!-- banner desktop -->
-
             <a href="#inicio" class="arriba"></a>
         </main>
         <footer>
@@ -173,6 +198,7 @@
                 </div>
             </div>
         </footer>
+        <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
