--- a/contacto.html
+++ b/contacto.html
@@ -18,6 +18,11 @@
             type="image/png"
             sizes="16x16"
         />
+        <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"
+    ></script>
     </head>
     <body>
         <header id ="inicio" class="header-content">
@@ -47,7 +52,10 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-menu">
+                    <span class="close-nav-bar ocultar">X</span>
+                    <i class="fas fa-bars"></i>
+                </li>
                 <li class="nav-bar-li ocultar">
                     <a href="/index.html">HOME</a>
                 </li>
