--- a/detalle-enfermedades.html
+++ b/detalle-enfermedades.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FAMEDIC - Detalle enfermedad</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/detalle-enfermedades.css" />
         <link
@@ -17,7 +18,11 @@
             type="image/png"
             sizes="16x16"
         />
-        <title>FAMEDIC - Detalle enfermedad</title>
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <header id="inicio" class="header-content">
@@ -46,7 +51,10 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-menu">
+                    <span class="close-nav-bar ocultar">X</span>
+                    <i class="fas fa-bars"></i>
+                </li>
                 <li class="nav-bar-li ocultar">
                     <a href="/index.html">HOME</a>
                 </li>
@@ -121,9 +129,9 @@
             <div id="mensaje-exito" class="mensaje-exito ocultar">
                 <p></p>
             </div>
-            <br>
-            <br>
-            <br>
+            <br />
+            <br />
+            <br />
             <section class="form-content">
                 <article class="form-left">
                     <p class="form-left-text">
@@ -159,9 +167,9 @@
                         name="detalle-enfermedades"
                         id="detalle-enfermedades"
                     >
-                    <div class="campos-obligatorios">
-                        <p>Los campos con '(*)' son OBLIGATORIOS</p>
-                    </div>
+                        <div class="campos-obligatorios">
+                            <p>Los campos con '(*)' son OBLIGATORIOS</p>
+                        </div>
                         <label for="nombre-apellido" class="form-label"
                             >(*) Nombre y Apellido</label
                         ><br />
@@ -311,7 +319,7 @@
                         />
                         <label for="fiebreFalse">No</label
                         ><span
-                            class="errorMessage "
+                            class="errorMessage"
                             id="errorCheckedFiebre"
                         ></span
                         ><br />
@@ -334,7 +342,7 @@
                         />
                         <label for="dolorCabezaFalse">No</label
                         ><span
-                            class="errorMessage "
+                            class="errorMessage"
                             id="errorCheckedDolorCabeza"
                         ></span
                         ><br />
@@ -356,7 +364,7 @@
                             class="validarCheck"
                         />
                         <label for="tosFalse">No</label
-                        ><span class="errorMessage " id="errorCheckedTos"></span
+                        ><span class="errorMessage" id="errorCheckedTos"></span
                         ><br />
 
                         <span>(*) ¿Tuviste dolor de garganta?</span>
@@ -377,7 +385,7 @@
                         />
                         <label for="dolorGargantaFalse">No</label
                         ><span
-                            class="errorMessage "
+                            class="errorMessage"
                             id="errorCheckedDolorGaraganta"
                         ></span
                         ><br />
@@ -402,7 +410,7 @@
                         />
                         <label for="dificultadRespirarFalse">No</label
                         ><span
-                            class="errorMessage "
+                            class="errorMessage"
                             id="errorCheckedRespirar"
                         ></span
                         ><br />
@@ -420,10 +428,7 @@
                         /><br /><br />
 
                         <div class="boton-enviar">
-                            <input
-                            type="submit"
-                            value="ENVIAR TEST"
-                        />
+                            <input type="submit" value="ENVIAR TEST" />
                         </div>
                     </form>
                 </article>
