--- a/index.html
+++ b/index.html
@@ -200,5 +200,6 @@
         </footer>
         <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
