--- a/listado-enfermedades.html
+++ b/listado-enfermedades.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FAMEDIC - Listado de enfermedades</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/listado-enfermedades.css" />
         <link
@@ -15,9 +18,11 @@
             type="image/png"
             sizes="16x16"
         />
-
-        <meta charset="UTF-8" />
-        <title>FAMEDIC - Listado de enfermedades</title>
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <header id="inicio" class="header-content">
@@ -45,7 +50,10 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-menu">
+                    <span class="close-nav-bar ocultar">X</span>
+                    <i class="fas fa-bars"></i>
+                </li>
                 <li class="nav-bar-li ocultar">
                     <a href="/index.html">HOME</a>
                 </li>
