--- a/vacunas.html
+++ b/vacunas.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>FAMEDIC - Vacunaci&oacute;n</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/vacunas.css" />
         <link
@@ -15,8 +18,11 @@
             type="image/png"
             sizes="16x16"
         />
-        <meta charset="UTF-8" />
-        <title>FAMEDIC - Vacunaci&oacute;n</title>
+        <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
         <header id="inicio" class="header-content">
@@ -44,7 +50,10 @@
         </header>
         <nav class="nav-bar">
             <ul>
-                <li class="nav-bar-menu"><i class="fas fa-bars"></i></li>
+                <li class="nav-bar-menu">
+                    <span class="close-nav-bar ocultar">X</span>
+                    <i class="fas fa-bars"></i>
+                </li>
                 <li class="nav-bar-li ocultar">
                     <a href="/index.html">HOME</a>
                 </li>
@@ -97,7 +106,9 @@
                 </article>
             </section>
             <hr />
-            <h3 class="centro-title">HOSPITALES CON CENTRO DE VACUNACI&oacute;N</h3>
+            <h3 class="centro-title">
+                HOSPITALES CON CENTRO DE VACUNACI&oacute;N
+            </h3>
             <section class="img-text-content">
                 <article class="two-col">
                     <div>
