Modifico opciones mobiles para que se hagan en el css y no en el JS, ademas agrego scrollTop al popup

--- a/index.html
+++ b/index.html
@@ -153,10 +153,19 @@
                 </article>
             </section>
             <aside class="banner-telefono">
+                <!-- banner telefono mobile -->
                 <div>
                     <img
-                        id="banner-telefono-responsive"
+                        id="banner-telefono-mobile"
                         src="img/banner-mobile.png"
+                        alt="banner con el numero de telefono 148 para llamar en caso de covid"
+                    />
+                </div>
+                <!-- banner telefono desktop -->
+                <div>
+                    <img
+                        id="banner-telefono-desktop"
+                        src="img/banner-desktop.png"
                         alt="banner con el numero de telefono 148 para llamar en caso de covid"
                     />
                 </div>
