cambios en aspecto visual de pagina Calendario

--- a/calendario.html
+++ b/calendario.html
@@ -79,12 +79,14 @@
         </ul>
     </nav>
     <main>
-        <div class="titulo-principal">
+        <section>
+        <article class="titulo-principal">
             <h2>Calendario de Vacunaci&oacute;n</h2>
-        </div>
-        <div id="calendario">
+        </article>
+        <article id="calendario">
 
-        </div>
+        </article>
+    </section>
     </main>
     <footer>
         <div class="footer-content">
