Modifico navbar responsive

--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"
     ></script>
+    <script src="js/main.js"></script>
     </head>
     <body>
         <header id ="inicio" class="header-content">
@@ -53,23 +54,23 @@
         <nav class="nav-bar">
             <ul>
                 <li class="nav-bar-menu">
-                    <span class="close-nav-bar ocultar">X</span>
+                    <span class="close-nav-bar">X</span>
                     <i class="fas fa-bars"></i>
                 </li>
                 <li class="nav-bar-li ocultar">
-                    <a href="/index.html">HOME</a>
+                    <a href="index.html">HOME</a>
                 </li>
                 <li class="nav-bar-li ocultar">
-                    <a href="/listado-enfermedades.html">ENFERMEDADES</a>
+                    <a href="listado-enfermedades.html">ENFERMEDADES</a>
                 </li>
                 <li class="nav-bar-li ocultar">
                     <a href="vacunas.html">VACUNACI&oacute;N</a>
                 </li>
                 <li class="nav-bar-li ocultar">
-                    <a href="/mapa.html">HOSPITALES</a>
+                    <a href="mapa.html">HOSPITALES</a>
                 </li>
                 <li class="nav-bar-li ocultar">
-                    <a href="/contacto.html">CONTACTO</a>
+                    <a href="contacto.html">CONTACTO</a>
                 </li>
             </ul>
         </nav>
@@ -222,6 +223,5 @@
             </div>
         </footer>
         <script src="js/contacto.js"></script>
-        <script src="js/main.js"></script>
     </body>
 </html>
