agrego calendario al index

--- a/calendario.html
+++ b/calendario.html
@@ -77,11 +77,19 @@
                 </li>
             </ul>
         </nav>
-        <main>
+        <main class="container">
             <section>
                 <article class="titulo-principal">
                     <h2>Calendario de Vacunaci&oacute;n</h2>
                 </article>
+                <section class="btn-volver">
+                    <a href="index.html">
+                        <button>
+                            <i class="fas fa-arrow-left"></i>
+                            Volver al inicio
+                        </button>
+                    </a>
+                </section>
                 <article id="calendario"></article>
             </section>
         </main>
