--- a/index.html
+++ b/index.html
@@ -151,6 +151,21 @@
                         >
                     </div>
                 </article>
+                <article>
+                    <div>
+                        <a href="calendario.html"
+                            ><img
+                                src="./img/calendario.png"
+                                alt="icono de un calendario"
+                                class="pastillas-img"
+                        /></a>
+                    </div>
+                    <div class="pastillas-link-content">
+                        <a href="calendario.html" class="pastillas-link"
+                            >Calendario</a
+                        >
+                    </div>
+                </article>
             </section>
             <aside class="banner-telefono">
                 <!-- banner telefono mobile -->
@@ -186,7 +201,12 @@
                         <li>
                             <a href="listado-enfermedades.html">Enfermedades</a>
                         </li>
-                        <li><a href="vacunas.html">Vacunas</a></li>
+                        <li>
+                            <a href="vacunas.html">Vacunas</a>
+                        </li>
+                        <li>
+                            <a href="calendario.html">Calendario</a>
+                        </li>
                         <li>
                             <a href="mapa.html">Hospitales</a>
                         </li>
